--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".LogInActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".UserActivity" />
-        <activity android:name=".List2Activity"></activity>
+        <activity android:name=".ListViewRegistered" />
     </application>
 
 </manifest>
